# qugar_devops

./: CMakeLists.txt  README.md  environment-dev.yml  pyproject.toml
.github/actions/clone-cache-install/: action.yml
.github/actions/install-cpp-dependencies/: action.yml
.github/actions/install-dependencies/: action.yml
.github/actions/install-python-dependencies/: action.yml
.github/workflows/: build_and_test.yml  build_cpp.yml  cross_os_ci.yml
cmake/: Dependencies.cmake  Install.cmake  ProjectOptions.cmake  lapacke.cmake
cpp/: CMakeLists.txt
doc/: developer.rst  index.rst  installation.rst
python/: CMakeLists.txt
python/test/: utils.py
